fix: spacing between glossary elements

--- a/assets/styles/components/Index.scss
+++ b/assets/styles/components/Index.scss
@@ -7,7 +7,7 @@
 
 	.wrapper {
 		padding: 0.5em;
-		margin-bottom: 0;
+		margin-bottom: 0 !important;
 	}
 
 	&__top {
@@ -63,6 +63,7 @@
 				li {
 					display: inline-block;
 					padding: 0.35em 0;
+					margin-left: 1em;
 
 					a {
 
@@ -85,6 +86,7 @@
 
 					li {
 						width: 33%;
+						margin-left: auto;
 					}
 				}
 			}
